examples/BAD/BAD_042_CONSISTENCY_1/main.nut
Import 'main2.nut'

@{"root":"yes"}
